# BaMMmotif2

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt~  README  README.md  examplePWM.meme  install_packages.R  make.sh
R/: FDRtool.R  MMcompare.R  Utils.plotHOBindingSitesLogo.R  Utils.plotHOLogo.R  Utils.readIMMs.R  calcAUSFC.R  calcAUSFC_rerank.R  evaluateBaMM.R  fdrtool.R  filterPWM.R  generateLogo.R  plotAUSFC_benchmark.R  plotAUSFC_benchmark_fdrtool.R  plotAUSFC_rank.R  plotBaMM.R  plotBaMMLogo.R  plotBaMMWrapper.R  plotBaMMlogo.R  plotFDR.R  plotHomogeneousBaMMWrapper.R  plotMaxContributingKmer.R  plotMaxContributingKmerWrapper.R  plotMaxContributingPosKmerWrapper.R  plotMotifDistribution.R  plotPositionalPrior.R  plotPvalStats.R  plotSFC.R  readBaMM.R
example/: JunD.fasta  JunD.hbcp  JunD.hbp  JunD_motif_1.ihbcp  exampleBindingSites.block
peng/: peng_motif
py/: BaMMcompare.py  BaMMmatch.py  bamm2pwm.py  cherrypick_peng.py  filterPWM.py  hocomoco2bamm.py  occur2bed.py  pwm2bamm.py  utils.py
py/db_search/: db_search.py  meme2models.py  precompute.py  utils.py
py/filterPWMs/: filterPWM.py  utils.py
src/: Alphabet.cpp  Alphabet.h  BackgroundModel.cpp  BackgroundModel.h  BackgroundModelSet.cpp  BackgroundModelSet.h  BackgroundModelSetScore.cpp  BackgroundModelSetScore.h  EM.cpp  EM.h  FDR.cpp  FDR.h  GibbsSampling.cpp  GibbsSampling.h  Global.cpp  Global.h  ModelLearning.cpp  ModelLearning.h  Motif.cpp  Motif.h  MotifSet.cpp  MotifSet.h  ScoreSeqSet.cpp  ScoreSeqSet.h  SeqGenerator.cpp  SeqGenerator.h  Sequence.cpp  Sequence.h  SequenceSet.cpp  SequenceSet.h  main.cpp  utils.h
src/Global/: CMakeLists.txt  Global.cpp  Global.h  main.cpp  utils.h
src/LBFGS/: LBFGS.h  LineSearch.h  Param.h
src/affinity_predicter/: CMakeLists.txt  KmerCounter.cpp  KmerCounter.h  KmerPredicter.cpp  KmerPredicter.h  KmerPredictor.cpp  KmerPredictor.h  KmerScorer.cpp  KmerScorer.h  ScoreKmer.cpp  ScoreKmer.h  mainPredictor.cpp
src/affinity_predictor/: KmerPredictor.cpp  KmerPredictor.h  mainPredictor.cpp
src/bamm/: CGS.cpp  CGS.h  CMakeLists.txt  EM.cpp  EM.h  FDR.cpp  FDR.h  Global.cpp  Global.h  ModelLearning.cpp  ModelLearning.h  Motif.cpp  Motif.h  MotifSet.cpp  MotifSet.h  ScoreSeqSet.cpp  ScoreSeqSet.h  SeqGenerator.cpp  SeqGenerator.h  main.cpp
src/dependencies/LBFGS/: LBFGS.h  LineSearch.h  Param.h
src/evaluater/: FDR.cpp  FDR.h  mainFDR.cpp
src/evaluation/: CMakeLists.txt  FDR.cpp  FDR.h  GFdr.cpp  GFdr.h  Global.cpp  Global.h  mainFDR.cpp
src/getopt_pp/: CMakeLists.txt  getopt_pp.cpp  getopt_pp.h
src/init/: Alphabet.cpp  Alphabet.h  BackgroundModel.cpp  BackgroundModel.h  BackgroundModelSet.cpp  BackgroundModelSet.h  BackgroundModelSetScore.cpp  BackgroundModelSetScore.h  CMakeLists.txt  Motif.cpp  Motif.h  MotifSet.cpp  MotifSet.h  Sequence.cpp  Sequence.h  SequenceSet.cpp  SequenceSet.h
src/misc/: CMakeLists.txt  extractProbs.cpp
src/motif_evaluater/: CMakeLists.txt  FDR.h  mainFDR.cpp
src/motif_refiner/: CMakeLists.txt  EM.cpp  EM.h  GibbsSampling.cpp  GibbsSampling.h  mainRefine.cpp  mainRefiner.cpp
src/refinement/: CMakeLists.txt  EM.cpp  EM.h  GibbsSampling.cpp  GibbsSampling.h  Global.cpp  Global.h  mainBaMM.cpp  utils.h
src/refiner/: CMakeLists.txt  EM.cpp  EM.h  GibbsSampling.cpp  GibbsSampling.h  ObjFun.h  mainBaMM.cpp
src/seq_generator/: CMakeLists.txt  GSimu.cpp  GSimu.h  SeqGenerator.cpp  SeqGenerator.h  mainSimulator.cpp
src/seq_scanner/: CMakeLists.txt  ScoreSeqSet.cpp  ScoreSeqSet.h  mainScan.cpp
src/seq_scoring/: CMakeLists.txt  GScan.cpp  GScan.h  ScoreSeqSet.cpp  ScoreSeqSet.h  mainScan.cpp
src/shared/: Alphabet.cpp  Alphabet.h  BackgroundModel.cpp  BackgroundModel.h  BackgroundModelSet.cpp  BackgroundModelSet.h  BackgroundModelSetScore.cpp  BackgroundModelSetScore.h  Sequence.cpp  Sequence.h  SequenceSet.cpp  SequenceSet.h  util_math.cpp  util_math.hpp  utils.h
src/virusX/: BackgroundModelSet.cpp  BackgroundModelSet.h  CMakeLists.txt  GBuilding.cpp  GBuilding.h  GPrediction.cpp  GPrediction.h  GScore.cpp  GScore.h  GenomeBaMMs.cpp  GenomeBaMMs.h  Global.cpp  Global.h  GlobalBuilding.cpp  GlobalBuilding.h  GlobalPrediction.cpp  GlobalPrediction.h  VirusHostInteractions.cpp  VirusHostInteractions.h  main.cpp  mainBuilding.cpp  mainPrediction.cpp  mainScore.cpp
